--- a/BookService/Content/Site.css
+++ b/BookService/Content/Site.css
@@ -15,3 +15,21 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*input.ng-invalid, input.ng-invalid:invalid {
+    border-color: red;   
+}
+
+input.ng-valid {
+    border-color: #0f0;
+}
+
+input.ng-pristine {
+    background-color: #eef;
+}
+    */
+
+/* when it's BOTH dirty and invalid (I don't want validation to fire if it's ng-pristine) */
+input.ng-dirty.ng-invalid{
+    border-color: red;
+}
