--- a/BookService/Views/Home/Angular.cshtml
+++ b/BookService/Views/Home/Angular.cshtml
@@ -33,7 +33,7 @@
         </div>
         @*<div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>*@
     </div>
-    
+
     <div class="col-md-4" ng-show="bookCtrl.details != null">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -56,11 +56,13 @@
             </div>
 
             <div class="panel-body">
-                <form class="form-horizontal" novalidate ng-submit="bookCtrl.addNewBook()">
+                <form name="form" class="form-horizontal" ng-submit="bookCtrl.addNewBook()" novalidate showvalidation>
+
+
                     <div class="form-group">
                         <label for="inputAuthor" class="col-sm-2 control-label">Author</label>
                         <div class="col-sm-10">
-                            <select ng-model="bookCtrl.newBook.Author" ng-options="author.Name for author in bookCtrl.authors | unique:'Name'">
+                            <select class="form-control" ng-model="bookCtrl.newBook.Author" ng-options="author.Name for author in bookCtrl.authors | unique:'Name'" required>
                                 <option value="">-- Choose Author --</option>
                             </select>
                         </div>
@@ -69,25 +71,34 @@
                     <div class="form-group">
                         <label for="inputTitle" class="col-sm-2 control-label">Title</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputTitle" ng-model="bookCtrl.newBook.Title" />
-                        </div>
-
-                        <label for="inputYear" class="col-sm-2 control-label">Year</label>
-                        <div class="col-sm-10">
-                            <input type="number" class="form-control" id="inputYear" ng-model="bookCtrl.newBook.Year" />
-                        </div>
-
-                        <label for="inputGenre" class="col-sm-2 control-label">Genre</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputGenre" ng-model="bookCtrl.newBook.Genre" />
-                        </div>
-
-                        <label for="inputPrice" class="col-sm-2 control-label">Price</label>
-                        <div class="col-sm-10">
-                            <input type="number" step="any" class="form-control" id="inputPrice" ng-model="bookCtrl.newBook.Price" />
+                            <input type="text" class="form-control" id="inputTitle" ng-model="bookCtrl.newBook.Title" required />
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <div class="form-group">
+                        <label for="inputYear" class="col-sm-2 control-label">Year</label>
+                        <div class="col-sm-10">
+                            <input type="number" class="form-control" id="inputYear" ng-model="bookCtrl.newBook.Year" required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputGenre" class="col-sm-2 control-label">Genre</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputGenre" ng-model="bookCtrl.newBook.Genre" required />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputPrice" class="col-sm-2 control-label">Price</label>
+                        <div class="col-sm-10">
+                            <input type="number" step="any" class="form-control" id="inputPrice" ng-model="bookCtrl.newBook.Price" required />
+                        </div>
+
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10 col-sm-offset-2">
+                            <button type="submit" class="btn btn-default" ng-disabled="form.$invalid">Submit</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
