--- a/BookService/Views/Home/Index.cshtml
+++ b/BookService/Views/Home/Index.cshtml
@@ -1,15 +1,44 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Book Service";
 }
 
-<h2>Index</h2>
-<p>
-    <a href="@Url.Content("~/Home/Angular")">View Angular Implementation</a>
-</p>
-<p>
-    <a href="@Url.Content("~/Home/Knockout")">View Knockout Implementation</a>
-</p>
+@*@section scripts {
+    @Scripts.Render("~/bundles/ng")
+}*@
+
+<div class="page-header">
+    <h1>BookService - Angular</h1>
+    <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
+    <!-- https://github.com/jirikavi/AngularJS-Toaster -->
+
+</div>
+
+<div class="row" ng-controller="BookController as bookCtrl">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2 class="panel-title">Books</h2>
+            </div>
+            <div class="panel-body">
+                <div cg-busy="bookCtrl.busyPromise"></div>
+                <ul class="list-unstyled">
+                    <li ng-repeat="book in bookCtrl.books">
+                        <strong><span>{{book.AuthorName}}</span></strong>: <span>{{book.Title}}</span>                        
+                        <small><a ng-href="#/bookdetail/{{book.Id}}">Details</a></small>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        @*<div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>*@
+    </div>
+
+    <div ng-view></div>
+</div>
+
+<hr />
+
+
 
 
 
