--- a/BookService/Views/Shared/_Layout.cshtml
+++ b/BookService/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="app">
+<html ng-app="app" id="app">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -39,6 +39,16 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/libs")
     @RenderSection("scripts", required: false)
+    
+    <script type="text/javascript" src="/App/app.js"></script>
+    <script type="text/javascript" src="/App/BaseResourceService.js"></script>
+    <script type="text/javascript" src="/App/books/AddBookController.js"></script>
+    <script type="text/javascript" src="/App/books/BookDetailsController.js"></script>
+    <script type="text/javascript" src="/App/books/BookController.js"></script>
+    <script type="text/javascript" src="/App/books/BookService.js"></script>
+    <script type="text/javascript" src="/App/authors/AuthorService.js"></script>
+    <script type="text/javascript" src="/App/genres/GenreService.js"></script>
 </body>
 </html>
