removing grunt setup

--- a/BookService/Views/Home/Index.cshtml
+++ b/BookService/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Book Service";
 }
 
-@*@section scripts {
+@section scripts {
     @Scripts.Render("~/bundles/ng")
-}*@
+}
 
 <div class="page-header">
     <h1>BookService - Angular</h1>
